Prevent page from stretching to the full height if content is not enough

--- a/css/lw-omega.styles.css
+++ b/css/lw-omega.styles.css
@@ -158,7 +158,6 @@ body.cke_editable {
   background-repeat: repeat-x;
   background-position: bottom left;
   background-attachment: fixed;
-  display: flex;
   min-height: 100vh;
 }
 
